Fix overflow scroll deactivate. Changed offset initialization.

--- a/styles/modules/_utils.scss
+++ b/styles/modules/_utils.scss
@@ -46,6 +46,12 @@
 	        overflow-scrolling: auto !important;
 }
 
+.overflow-scroll.deactivate {
+	-webkit-overflow-scrolling: auto !important;
+	        overflow-scrolling: auto !important;
+}
+
+
 // .hide {
 // 	display: none;
 // }
